--- a/style.css
+++ b/style.css
@@ -14,11 +14,54 @@ line-height: 32px; /* 200% */
 letter-spacing: 3px;
 text-transform: uppercase;
 }
-.chapter-a{
+h3{
     color: #171B1B;
 font-family: Ultra;
 font-size: 56px;
 font-style: normal;
 font-weight: 400;
 line-height: 64px; /* 114.286% */
+}
+.home-bread{
+width: 770px;
+height: 448px;
+flex-shrink: 0;
+float:left;
+margin-right:25px;
+
+}
+.bread-a{
+    
+width: 370px;
+height: 448px;
+flex-shrink: 0;
+margin-right:27px
+}
+.cupcake-c{  
+width: 370px;
+height: 448px;
+flex-shrink: 0;
+}
+.biscuit-b{
+width: 370px;
+height: 448px;
+flex-shrink: 0; 
+margin-right:20px;
+}
+.brioeche-r{
+width: 370px;
+height:448px;
+flex-shrink: 0;
+}
+button{
+color: #171B1B;
+text-align: center;
+font-family: Oswald;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-transform: uppercase;
+width: 170px;
+height: 48px;
 }
